Add ability to run in dry-run mode

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -27,14 +27,12 @@
     "#| export\n",
     "import datasets\n",
     "import gc\n",
-    "import hashlib\n",
     "import logging\n",
     "import multiprocessing\n",
     "import os\n",
     "import random\n",
     "import re\n",
     "\n",
-    "import dill as pickle\n",
     "import networkit as nk\n",
     "import numpy as np\n",
     "\n",
@@ -120,9 +118,10 @@
    "source": [
     "#| export\n",
     "def check_char_repetition(\n",
-    "    document, # document to be analyzed\n",
-    "    char_repetition_len=10, # length of character repetition\n",
-    "    char_repetition_threshold=0.2, # threshold for character repetition\n",
+    "    document,                       # document to be analyzed\n",
+    "    char_repetition_len=10,         # length of character repetition\n",
+    "    char_repetition_threshold=0.2,  # threshold for character repetition\n",
+    "    dry_run=False,                  # if True, returns the ratio of character repetition\n",
     ") -> bool: # returns True if document is below threshold\n",
     "    \"\"\"\n",
     "    Checks if the document is below the character repetition threshold.\n",
@@ -130,7 +129,10 @@
     "    char_rep_ratio = _char_rep_ratio(\n",
     "        document, char_repetition_len\n",
     "    )\n",
-    "    return char_rep_ratio <= char_repetition_threshold"
+    "    if dry_run:\n",
+    "        return char_rep_ratio\n",
+    "    else:\n",
+    "        return char_rep_ratio <= char_repetition_threshold"
    ]
   },
   {
@@ -190,11 +192,12 @@
    "source": [
     "#| exporti\n",
     "def check_flagged_words(\n",
-    "    document: str, # document to be analyzed\n",
-    "    flagged_words: list = flagged_words[\"en\"], # list of flagged words\n",
-    "    flagged_words_threshold: float = 0.1, # threshold for flagged words\n",
-    "    get_words_func: callable = get_words, # function to get words from document\n",
-    ") -> bool: # returns True if document is below threshold\n",
+    "    document: str,                              # document to be analyzed\n",
+    "    flagged_words: list = flagged_words[\"en\"],  # list of flagged words\n",
+    "    flagged_words_threshold: float = 0.1,       # threshold for flagged words\n",
+    "    get_words_func: callable = get_words,       # function to get words from document\n",
+    "    dry_run: bool = False,                      # if True, returns the ratio of flagged words\n",
+    ") -> bool:                                      # returns True if document is below threshold unless dry_run is True\n",
     "    \"\"\"\n",
     "    Checks if a document contains a high percentage of flagged words.\n",
     "    \"\"\"\n",
@@ -205,6 +208,9 @@
     "            flagged_words,\n",
     "            get_words_func,\n",
     "        )\n",
+    "        if dry_run:\n",
+    "            return flagged_words_ratio\n",
+    "\n",
     "        cond = flagged_words_ratio <= flagged_words_threshold\n",
     "    return cond"
    ]
@@ -501,12 +507,13 @@
    "source": [
     "#| export\n",
     "def minhash_dedup(\n",
-    "    ds, # The dataset to deduplicate.\n",
-    "    column, # The column to use for deduplication.\n",
-    "    community_detection: bool = False, # Whether to use community detection to find the duplicate communities, or to use the connected components.\n",
-    "    report_false_positive_rate: bool = False, # Whether to report the false positive rate.\n",
-    "    threshold: float = 0.85, # The threshold to use for deduplication.\n",
-    "    num_perm: int = 128 # The number of permutations to use for minhashing.\n",
+    "    ds,                                         # The dataset to deduplicate.\n",
+    "    column,                                     # The column to use for deduplication.\n",
+    "    community_detection: bool = False,          # Whether to use community detection to find the duplicate communities, or to use the connected components.\n",
+    "    report_false_positive_rate: bool = False,   # Whether to report the false positive rate.\n",
+    "    threshold: float = 0.85,                    # The threshold to use for deduplication.\n",
+    "    num_perm: int = 128,                        # The number of permutations to use for minhashing.\n",
+    "    dry_run: bool = False,                      # Whether to run the deduplication in dry run mode.\n",
     ") -> Dataset:\n",
     "    \"\"\"\n",
     "    Deduplicate the dataset using minhashing as described in the paper \"Deduplicating Training Data Makes Language Models Better\".\n",
@@ -518,7 +525,6 @@
     "        threshold=threshold,\n",
     "        num_perm=num_perm,\n",
     "    )\n",
-    "    logger.info(f\"Dataset columns: {ds.column_names}\")\n",
     "    column_names = ds.column_names\n",
     "    ds = ds.map(\n",
     "        lambda _, idx: {\"__id__\": idx},\n",
@@ -526,7 +532,6 @@
     "        num_proc=os.cpu_count(),\n",
     "        desc=\"Adding index...\",\n",
     "    )\n",
-    "    logger.info(f\"Dataset columns: {ds.column_names}\")\n",
     "    hashed_ds = ds.map(\n",
     "        function=_hash_func,\n",
     "        fn_kwargs={\"num_perm\": num_perm},\n",
@@ -535,7 +540,6 @@
     "        num_proc=os.cpu_count(),\n",
     "        desc=f\"Fingerprinting...\",\n",
     "    )\n",
-    "    logger.info(f\"Dataset columns: {hashed_ds.column_names}\")\n",
     "    with lsh.insertion_session() as session:\n",
     "        for data in tqdm(hashed_ds, desc=\"Indexing signatures...\"):\n",
     "            if data[\"__id__\"] in lsh:\n",
@@ -560,7 +564,6 @@
     "    queried = hashed_ds.map(\n",
     "        lambda x, y: _query_content(x, y, index=lsh),\n",
     "        num_proc=os.cpu_count(),\n",
-    "        # new_fingerprint=hashlib.md5(pickle.dumps(conf)).hexdigest(),\n",
     "        features=Features({\n",
     "            \"__id__\": Value(dtype='int64', id=None),\n",
     "            \"__neighbors__\": Sequence(feature=Value(dtype='int64', id=None), length=-1, id=None)\n",
@@ -569,13 +572,14 @@
     "        remove_columns=[\"__signature__\"],\n",
     "        desc=f\"Querying...\",\n",
     "    )\n",
-    "    logger.info(f\"Dataset columns: {queried.column_names}\")\n",
     "\n",
     "    del lsh\n",
     "    gc.collect()\n",
     "\n",
     "    queried = queried.filter(\n",
-    "        lambda x: len(x[\"__neighbors__\"]) > 0, num_proc=os.cpu_count(), desc=\"Finding duplicates...\"\n",
+    "        lambda x: len(x[\"__neighbors__\"]) > 0,\n",
+    "        num_proc=os.cpu_count(),\n",
+    "        desc=\"Finding duplicates...\"\n",
     "    )\n",
     "    dup_ids = _find_duplicate_communities(\n",
     "        records=queried,\n",
@@ -589,12 +593,20 @@
     "    del queried\n",
     "    gc.collect()\n",
     "\n",
-    "    final_data = ds.filter(\n",
-    "        lambda idx: idx not in dup_ids,\n",
-    "        input_columns=[\"__id__\"],\n",
-    "        num_proc=os.cpu_count(),\n",
-    "        desc=\"Filtering duplicates...\",\n",
-    "    )\n",
+    "    if dry_run:\n",
+    "        final_data = ds.map(\n",
+    "            lambda idx: {\"duplicate\": idx in dup_ids},\n",
+    "            input_columns=[\"__id__\"],\n",
+    "            num_proc=os.cpu_count(),\n",
+    "            desc=\"Labeling duplicates...\",\n",
+    "        )\n",
+    "    else:\n",
+    "        final_data = ds.filter(\n",
+    "            lambda idx: idx not in dup_ids,\n",
+    "            input_columns=[\"__id__\"],\n",
+    "            num_proc=os.cpu_count(),\n",
+    "            desc=\"Filtering duplicates...\",\n",
+    "        )\n",
     "    return final_data"
    ]
   },
@@ -604,70 +616,66 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:36] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'text'</span><span style=\"font-weight: bold\">]</span>                                             <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#20\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">20</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[11/24/22 19:39:36]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'text'\u001b[0m\u001b[1m]\u001b[0m                                             \u001b]8;id=16810;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=521335;file:///tmp/ipykernel_43483/3015929395.py#20\u001b\\\u001b[2m20\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:38] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'text'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span><span style=\"font-weight: bold\">]</span>                                   <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#28\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">28</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[11/24/22 19:39:38]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'text'\u001b[0m, \u001b[32m'__id__'\u001b[0m\u001b[1m]\u001b[0m                                   \u001b]8;id=583158;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=40028;file:///tmp/ipykernel_43483/3015929395.py#28\u001b\\\u001b[2m28\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:40] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__signature__'</span><span style=\"font-weight: bold\">]</span>                          <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#37\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">37</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[11/24/22 19:39:40]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'__id__'\u001b[0m, \u001b[32m'__signature__'\u001b[0m\u001b[1m]\u001b[0m                          \u001b]8;id=873495;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=904110;file:///tmp/ipykernel_43483/3015929395.py#37\u001b\\\u001b[2m37\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indexing signatures...: 100%|██████████| 1000/1000 [00:00<00:00, 9945.99it/s]\n"
+      "                                                                "
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:44] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__neighbors__'</span><span style=\"font-weight: bold\">]</span>                          <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#71\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">71</span></a>\n",
-       "</pre>\n"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f1cc09fc302421086dfb22f4c5ef2de",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "\u001b[2;36m[11/24/22 19:39:44]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'__id__'\u001b[0m, \u001b[32m'__neighbors__'\u001b[0m\u001b[1m]\u001b[0m                          \u001b]8;id=477832;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=324495;file:///tmp/ipykernel_43483/3015929395.py#71\u001b\\\u001b[2m71\u001b[0m\u001b]8;;\u001b\\\n"
+       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Constructing graph...: 100%|██████████| 373/373 [00:00<00:00, 4547.52it/s]\n",
-      "Iterating over communities...: 100%|██████████| 635/635 [00:00<00:00, 436620.17it/s]\n"
+      "                                                                "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "114e0ebac584423ebc236285738412f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b4b5c455cf514b29b43928733b1f7fe8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                "
      ]
     }
    ],
@@ -678,6 +686,83 @@
     "\n",
     "assert len(deduped_dataset) == len(dataset) - len(dup_ids)\n",
     "assert deduped_dataset.column_names == dataset.column_names + [\"__id__\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d51f6d77fa4469895b65b993b64ca71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "767daeb9e48542c6a8403ed4676924a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02ff878012b7473283c544f7be40b762",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                "
+     ]
+    }
+   ],
+   "source": [
+    "# test dry run\n",
+    "deduped_dataset = minhash_dedup(dataset, \"text\", community_detection=True, threshold=0.85, num_perm=128, dry_run=True)\n",
+    "\n",
+    "assert len(deduped_dataset) == len(dataset)\n",
+    "assert deduped_dataset.column_names == dataset.column_names + [\"__id__\", \"duplicate\"]"
    ]
   },
   {
