--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2883,6 +2883,26 @@
     "```\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, you can run the pipeline in a dry run mode by passing `dry_run=True` to the `run` function. This will make no modifications to the datasets' documents, but will add additional columns to the datasets with the results of the filters and cleaners. For example, if you if you ran the pipeline with the `check_char_repetition` filter, you would get a new column called `check_char_repetition` with a float value between 0 and 1 indicating the percentage of characters that are repeated in the document.\n",
+    "\n",
+    "```python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline(datasources)\n",
+    "pipeline.run(dry_run=True)\n",
+    "pipeline.datasources[0][\"dataset\"].features"
+   ]
   }
  ],
  "metadata": {
