Add support for filtering based on KenLM perplexity

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -155,16 +155,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def check_exact_match(): pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
     "def _flag_word_ratio(\n",
     "    doc: str, # document to be analyzed\n",
     "    flagged_words: list, # list of flagged words\n",
@@ -230,6 +220,62 @@
    "source": [
     "assert check_flagged_words(\"test\") == True\n",
     "assert check_flagged_words(\"bdsm\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_perplexity(\n",
+    "    document, # document to be analyzed\n",
+    "    perplexity_threshold=10_000, # threshold for perplexity\n",
+    "    model=None, # model to calculate perplexity\n",
+    "    dry_run=False, # if True, returns the perplexity of the document\n",
+    ") -> bool: # returns True if document is below threshold\n",
+    "    \"\"\"\n",
+    "    Checks if the document is below the perplexity threshold.\n",
+    "    \"\"\"\n",
+    "    perplexity = model.get_perplexity(document)\n",
+    "    if dry_run:\n",
+    "        return perplexity\n",
+    "    else:\n",
+    "        return perplexity <= perplexity_threshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run this test, you need to have kenlm and sentencepiece installed:\n",
+    "`pip install https://github.com/kpu/kenlm/archive/master.zip sentencepiece`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval: false\n",
+    "from squeakily.helpers import KenlmModel\n",
+    "\n",
+    "model = KenlmModel.from_pretrained(\n",
+    "    model_dataset=\"wikipedia\",\n",
+    "    language=\"en\",\n",
+    "    lower_case=True,\n",
+    "    remove_accents=True,\n",
+    "    normalize_numbers=True,\n",
+    "    punctuation=1,\n",
+    ")\n",
+    "\n",
+    "low_test_str = \"I am very perplexed\"\n",
+    "high_test_str = \"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed ...\"\n",
+    "\n",
+    "assert check_perplexity(low_test_str, perplexity_threshold=1_000, model=model) == True\n",
+    "assert check_perplexity(high_test_str, perplexity_threshold=1_000, model=model) == False"
    ]
   },
   {
