--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -25,7 +25,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import re"
+    "import os\n",
+    "import re\n",
+    "import sentencepiece\n",
+    "import unicodedata\n",
+    "\n",
+    "from huggingface_hub import cached_download, hf_hub_url\n",
+    "from requests.exceptions import HTTPError\n",
+    "from typing import Dict"
    ]
   },
   {
@@ -633,6 +640,256 @@
     "        \"肛交\",\n",
     "    ],\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code has been copied from the awesome Huggingface Space by [edugp](https://huggingface.co/spaces/edugp/perplexity-lenses/blob/main/perplexity_lenses/perplexity.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class SentencePiece:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model: str,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.sp = sentencepiece.SentencePieceProcessor()\n",
+    "        self.sp.load(str(model))\n",
+    "\n",
+    "    def do(self, text: dict) -> dict:\n",
+    "        tokenized = self.sp.encode_as_pieces(text)\n",
+    "        return \" \".join(tokenized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "KENLM_MODEL_REPO = \"edugp/kenlm\"\n",
+    "\n",
+    "class KenlmModel:\n",
+    "    digit_re: re.Pattern = re.compile(r\"\\d\")\n",
+    "    unicode_punct: Dict[str, str] = {\n",
+    "        \"，\": \",\",\n",
+    "        \"。\": \".\",\n",
+    "        \"、\": \",\",\n",
+    "        \"„\": '\"',\n",
+    "        \"”\": '\"',\n",
+    "        \"“\": '\"',\n",
+    "        \"«\": '\"',\n",
+    "        \"»\": '\"',\n",
+    "        \"１\": '\"',\n",
+    "        \"」\": '\"',\n",
+    "        \"「\": '\"',\n",
+    "        \"《\": '\"',\n",
+    "        \"》\": '\"',\n",
+    "        \"´\": \"'\",\n",
+    "        \"∶\": \":\",\n",
+    "        \"：\": \":\",\n",
+    "        \"？\": \"?\",\n",
+    "        \"！\": \"!\",\n",
+    "        \"（\": \"(\",\n",
+    "        \"）\": \")\",\n",
+    "        \"；\": \";\",\n",
+    "        \"–\": \"-\",\n",
+    "        \"—\": \" - \",\n",
+    "        \"．\": \". \",\n",
+    "        \"～\": \"~\",\n",
+    "        \"’\": \"'\",\n",
+    "        \"…\": \"...\",\n",
+    "        \"━\": \"-\",\n",
+    "        \"〈\": \"<\",\n",
+    "        \"〉\": \">\",\n",
+    "        \"【\": \"[\",\n",
+    "        \"】\": \"]\",\n",
+    "        \"％\": \"%\",\n",
+    "        \"►\": \"-\",\n",
+    "    }\n",
+    "    unicode_punct_re = re.compile(f\"[{''.join(unicode_punct.keys())}]\")\n",
+    "    non_printing_chars_re = re.compile(\n",
+    "        f\"[{''.join(map(chr, list(range(0,32)) + list(range(127,160))))}]\"\n",
+    "    )\n",
+    "    kenlm_model_dir = None\n",
+    "    sentence_piece_model_dir = None\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model_dataset: str,\n",
+    "        language: str,\n",
+    "        lower_case: bool = False,\n",
+    "        remove_accents: bool = False,\n",
+    "        normalize_numbers: bool = True,\n",
+    "        punctuation: int = 1,\n",
+    "    ):\n",
+    "        import kenlm\n",
+    "\n",
+    "        self.download_kenlm_model(model_dataset, language)\n",
+    "        try:\n",
+    "            self.model = kenlm.Model(self.kenlm_model_dir)\n",
+    "            self.tokenizer = SentencePiece(self.sentence_piece_model_dir)\n",
+    "        except OSError:\n",
+    "            os.remove(self.kenlm_model_dir)\n",
+    "            if os.path.exists(self.sentence_piece_model_dir):\n",
+    "                os.remove(self.sentence_piece_model_dir)\n",
+    "            raise OSError(\n",
+    "                \"File was corrupt and should have been removed. Please, retry.\"\n",
+    "            )\n",
+    "        self.accent = remove_accents\n",
+    "        self.case = lower_case\n",
+    "        self.numbers = normalize_numbers\n",
+    "        self.punct = punctuation\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_pretrained(\n",
+    "        cls,\n",
+    "        *,\n",
+    "        model_dataset: str,\n",
+    "        language: str,\n",
+    "        lower_case: bool,\n",
+    "        remove_accents: bool,\n",
+    "        normalize_numbers: bool,\n",
+    "        punctuation: int,\n",
+    "    ):\n",
+    "        return cls(\n",
+    "            model_dataset,\n",
+    "            language,\n",
+    "            lower_case,\n",
+    "            remove_accents,\n",
+    "            normalize_numbers,\n",
+    "            punctuation,\n",
+    "        )\n",
+    "\n",
+    "    def pp(self, log_score, length):\n",
+    "        return 10.0 ** (-log_score / length)\n",
+    "\n",
+    "    def get_perplexity(self, doc: str, normalize_cc_net: bool = True):\n",
+    "        if normalize_cc_net:\n",
+    "            doc = self.normalize(\n",
+    "                doc,\n",
+    "                accent=self.accent,\n",
+    "                case=self.case,\n",
+    "                numbers=self.numbers,\n",
+    "                punct=self.punct,\n",
+    "            )\n",
+    "        # Tokenize (after normalizing): See https://github.com/facebookresearch/cc_net/blob/bda555bd1cf1ee2e0b925363e62a61cd46c8b60d/cc_net/mine.py#L352 for full pipeline\n",
+    "        doc = self.tokenizer.do(doc)\n",
+    "        doc_log_score, doc_length = 0, 0\n",
+    "        for line in doc.split(\"\\n\"):\n",
+    "            log_score = self.model.score(line)\n",
+    "            length = len(line.split()) + 1\n",
+    "            doc_log_score += log_score\n",
+    "            doc_length += length\n",
+    "        return round(self.pp(doc_log_score, doc_length), 1)\n",
+    "\n",
+    "    def normalize(\n",
+    "        self,\n",
+    "        line: str,\n",
+    "        accent: bool = True,\n",
+    "        case: bool = True,\n",
+    "        numbers: bool = True,\n",
+    "        punct: int = 1,\n",
+    "    ) -> str:\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            return line\n",
+    "        if case:\n",
+    "            line = line.lower()\n",
+    "        if accent:\n",
+    "            line = self.strip_accents(line)\n",
+    "        if numbers:\n",
+    "            line = self.digit_re.sub(\"0\", line)\n",
+    "        if punct == 1:\n",
+    "            line = self.replace_unicode_punct(line)\n",
+    "        elif punct == 2:\n",
+    "            line = self.remove_unicode_punct(line)\n",
+    "        line = self.remove_non_printing_char(line)\n",
+    "        return line\n",
+    "\n",
+    "    def strip_accents(self, line: str) -> str:\n",
+    "        \"\"\"Strips accents from a piece of text.\"\"\"\n",
+    "        nfd = unicodedata.normalize(\"NFD\", line)\n",
+    "        output = [c for c in nfd if unicodedata.category(c) != \"Mn\"]\n",
+    "        if len(output) == line:\n",
+    "            return line\n",
+    "        return \"\".join(output)\n",
+    "\n",
+    "    def replace_unicode_punct(self, text: str) -> str:\n",
+    "        return \"\".join(self.unicode_punct.get(c, c) for c in text)\n",
+    "\n",
+    "    def remove_unicode_punct(self, text: str) -> str:\n",
+    "        \"\"\"More aggressive version of replace_unicode_punct but also faster.\"\"\"\n",
+    "        return self.unicode_punct_re.sub(\"\", text)\n",
+    "\n",
+    "    def remove_non_printing_char(self, text: str) -> str:\n",
+    "        return self.non_printing_chars_re.sub(\"\", text)\n",
+    "\n",
+    "    def download_kenlm_model(self, model_dataset: str, language: str):\n",
+    "        try:\n",
+    "            kenlm_model_url = hf_hub_url(\n",
+    "                KENLM_MODEL_REPO, filename=f\"{model_dataset}/{language}.arpa.trie.bin\"\n",
+    "            )\n",
+    "            self.kenlm_model_dir = cached_download(kenlm_model_url)\n",
+    "        except HTTPError:\n",
+    "            kenlm_model_url = hf_hub_url(\n",
+    "                KENLM_MODEL_REPO, filename=f\"{model_dataset}/{language}.arpa.bin\"\n",
+    "            )\n",
+    "            self.kenlm_model_dir = cached_download(kenlm_model_url)\n",
+    "        sentence_piece_model_url = hf_hub_url(\n",
+    "            KENLM_MODEL_REPO, filename=f\"{model_dataset}/{language}.sp.model\"\n",
+    "        )\n",
+    "        self.sentence_piece_model_dir = cached_download(sentence_piece_model_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run this test, you need to have kenlm installed:\n",
+    "`pip install https://github.com/kpu/kenlm/archive/master.zip`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nathan/miniconda3/envs/squeakily/lib/python3.10/site-packages/huggingface_hub/file_download.py:592: FutureWarning: `cached_download` is the legacy way to download files from the HF hub, please consider upgrading to `hf_hub_download`\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "#|eval: false\n",
+    "model = KenlmModel.from_pretrained(\n",
+    "    model_dataset=\"wikipedia\",\n",
+    "    language=\"en\",\n",
+    "    lower_case=True,\n",
+    "    remove_accents=True,\n",
+    "    normalize_numbers=True,\n",
+    "    punctuation=1,\n",
+    ")\n",
+    "\n",
+    "# Get perplexity\n",
+    "perplex_1 = model.get_perplexity(\"I am very perplexed\")\n",
+    "perplex_2 = model.get_perplexity(\"im hella trippin\")\n",
+    "\n",
+    "assert perplex_1 < perplex_2"
    ]
   },
   {
