Add support for fasttext lang detection

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -279,6 +279,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_language(\n",
+    "    document, # document to be analyzed\n",
+    "    language=\"en\", # language to check\n",
+    "    language_threshold=0.9, # threshold for language\n",
+    "    model=None, # model to check language\n",
+    "    dry_run=False, # if True, returns the language of the document\n",
+    ") -> bool: # returns True if document is below threshold\n",
+    "    \"\"\"\n",
+    "    Checks if the document is below the language threshold.\n",
+    "    \"\"\"\n",
+    "    lang, prob = model.get_language(document)\n",
+    "    if dry_run:\n",
+    "        return lang, prob\n",
+    "    else:\n",
+    "        return language == lang and prob > language_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#|eval: false\n",
+    "from squeakily.helpers import FastTextLanguageDetector\n",
+    "\n",
+    "fasttext_model = FastTextLanguageDetector.from_pretrained()\n",
+    "\n",
+    "english_text = \"Hi, my name is John.\"\n",
+    "spanish_text = \"Hola, me llamo Juan.\"\n",
+    "chinese_text = \"你好，我叫张三。\"\n",
+    "\n",
+    "assert check_language(english_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == True\n",
+    "assert check_language(spanish_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == False\n",
+    "assert check_language(chinese_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
