--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -27,8 +27,9 @@
     "#| export\n",
     "import os\n",
     "import re\n",
-    "import sentencepiece\n",
+    "import squeakily\n",
     "import unicodedata\n",
+    "import urllib.request\n",
     "\n",
     "from huggingface_hub import cached_download, hf_hub_url\n",
     "from requests.exceptions import HTTPError\n",
@@ -646,6 +647,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following code is adapted from this awesome blog post by [C Chaitanya](https://medium.com/@c.chaitanya/language-identification-in-python-using-fasttext-60359dc30ed0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class FastTextLanguageDetector:\n",
+    "    def __init__(self, model_path: str = \"/tmp/lid.176.bin\"):\n",
+    "        import fasttext\n",
+    "        self.model = fasttext.load_model(model_path)\n",
+    "\n",
+    "    def get_language(self, text):\n",
+    "        prediction = self.model.predict(text, k=1) # returns top 2 matching languages\n",
+    "        lang, prob = prediction[0][0].replace(\"__label__\", \"\"), prediction[1][0]\n",
+    "        return lang, prob\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_pretrained(\n",
+    "        cls,\n",
+    "        *,\n",
+    "        url: str = \"https://dl.fbaipublicfiles.com/fasttext/supervised-models/lid.176.bin\",\n",
+    "        output_dir: str = squeakily.__path__[0],\n",
+    "    ):\n",
+    "        path = os.path.join(output_dir, \"lid.176.bin\")\n",
+    "        if not os.path.exists(path):\n",
+    "            # download pretrained model with standard lib (From: https://stackoverflow.com/questions/22676/how-to-download-a-file-over-http)\n",
+    "            response = urllib.request.urlretrieve(url, )\n",
+    "            if response:\n",
+    "                return cls(model_path=os.path.join(output_dir, \"lid.176.bin\"))\n",
+    "            else:\n",
+    "                raise Exception(\"Failed to download model\")\n",
+    "        else:\n",
+    "            return cls(model_path=path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#|eval: false\n",
+    "fasttext_model = FastTextLanguageDetector.from_pretrained()\n",
+    "\n",
+    "# test spanish\n",
+    "lang, prob = fasttext_model.get_language(\"Hola, como estas?\")\n",
+    "assert lang == \"es\"\n",
+    "assert prob > 0.9\n",
+    "\n",
+    "# test english\n",
+    "lang, prob = fasttext_model.get_language(\"Hello, how are you?\")\n",
+    "assert lang == \"en\"\n",
+    "assert prob > 0.9\n",
+    "\n",
+    "# test combination\n",
+    "lang, prob = fasttext_model.get_language(\"Hello, how are you? Hola, como estas?\")\n",
+    "assert prob < 0.9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The following code has been copied from the awesome Huggingface Space by [edugp](https://huggingface.co/spaces/edugp/perplexity-lenses/blob/main/perplexity_lenses/perplexity.py)"
    ]
   },
@@ -661,6 +737,7 @@
     "        self,\n",
     "        model: str,\n",
     "    ):\n",
+    "        import sentencepiece\n",
     "        super().__init__()\n",
     "        self.sp = sentencepiece.SentencePieceProcessor()\n",
     "        self.sp.load(str(model))\n",
