Add checking for certain min and max of words

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -331,6 +331,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_word_number(\n",
+    "    document, # document to be analyzed\n",
+    "    min_word_threshold=5, # minimum number of words\n",
+    "    max_word_threshold=100, # maximum number of words\n",
+    "    get_words_func=get_words, # function to get words from document\n",
+    "    dry_run=False, # if True, returns the number of words in the document\n",
+    ") -> bool: # returns True if document is between the minimum and maximum thresholds\n",
+    "    \"\"\"\n",
+    "    Checks if the document is between the minimum and maximum word thresholds.\n",
+    "    \"\"\"\n",
+    "    words = get_words_func(document)\n",
+    "    if dry_run:\n",
+    "        return len(words)\n",
+    "    else:\n",
+    "        return len(words) >= min_word_threshold and len(words) <= max_word_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_str = \"This is a test string.\"\n",
+    "\n",
+    "assert check_word_number(test_str, min_word_threshold=5, max_word_threshold=10) == True\n",
+    "assert check_word_number(test_str, min_word_threshold=1, max_word_threshold=4) == False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
